--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>responsive</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -74,7 +75,25 @@
 				<p>ditribute html experiance.</p>
 			</article>
 		</div>
-		
+			<div class="boxis22">
+				<div class="boxiss flex">
+					<article class="box1">
+						<img class="row" src="img/row.png" alt="row">
+						<h3>MISSION</h3>
+						<p>ditribute html experiance.</p>
+					</article>
+					<article class="box2">
+						<img class="comp" src="img/comp.png" alt="comp">
+						<h3>VISION</h3>
+						<p>ditribute html experiance.</p>
+					</article>
+				</div>
+				<article class="box33">
+					<img class="rac" src="img/rac.png">
+					<h3>PHYLOSOPHY</h3>
+					<p>ditribute html experiance.</p>
+				</article>
+			</div>
 	</section>
 	<section class="conta">
 		<div class="cont">
@@ -93,8 +112,28 @@
 					<img src="img/man4.png" alt="man4">
 				</div>
 			</div>
-
 		</div>
+
+		<div class="cont1">
+			<h3>TEAM</h3>
+			<div class="men flex">
+				<div class="man ">
+					<img src="img/man1.png" alt="man1">
+				</div>
+				<div class="man">
+					<img src="img/man2.png" alt="man2">
+				</div>	
+			</div>
+			<div class="men flex">
+				<div class="man">
+					<img src="img/man3.png" alt="man3">
+				</div>
+				<div class="man">
+					<img src="img/man4.png" alt="man4">
+				</div>
+			</div>
+		</div>
+
 	</section>
 	<section class="soci">
 		<div class="soc flex">
