--- a/index2.html
+++ b/index2.html
@@ -3,6 +3,7 @@
 <head><meta charset="utf-8">
 	<title>responsive</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.5">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style2.css">
 </head>
@@ -13,16 +14,16 @@
 			<nav class="navigation">
 				<ul class="navigation-ul flex">
 					<li class="navigation-li">
-						<a class="navigation-a">home</a>
+						<a class="navigation-a" href="#">home</a>
 					</li>
 					<li class="navigation-li">
-						<a class="navigation-a">news</a>
+						<a class="navigation-a" href="#">news</a>
 					</li>
 					<li class="navigation-li">
-						<a class="navigation-a">about</a>
+						<a class="navigation-a" href="index.html">about</a>
 					</li>
 					<li class="navigation-li">
-						<a class="navigation-a">contact</a>
+						<a class="navigation-a" href="#">contact</a>
 					</li>					
 				</ul>				
 			</nav>
@@ -67,9 +68,61 @@
 					<iframe width="566" height="316" src="https://www.youtube.com/embed/ynjRNE9S2sU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 			</div>
-		</div>
-		
+		</div>		
 	</section>
+	<section class="section3">
+		<div class="box width">
+			<h1>NEWS | view all news</h1>
+			<div class="boxis flex">
+				<article class="boxbox">
+					<img src="img/banner1.jpg" alt="banner1">
+					<p>Typography Lab</p>					
+				</article>
+				<article class="boxbox">
+					<img src="img/banner1.jpg" alt="banner1">
+					<p>Typography Lab</p>					
+				</article>
+				<article class="boxbox">
+					<img src="img/banner1.jpg" alt="banner1">
+					<p>Typography Lab</p>					
+				</article>
+				<article class="boxbox">
+					<img src="img/banner1.jpg" alt="banner1">
+					<p>Typography Lab</p>					
+				</article>
+			</div>
+			<p class="read-more">read more</p>
+		</div>		
+	</section>
+	<section class="section4">
+		<div class="media width">
+			<h1>Featured | view all featured media</h1>
+			<div class="media-child flex">
+				<div class="med">
+					<h3>Responsive Web Design</h3>
+					<article>
+						<img src="img/mob.png">
+						<p>approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.</p>
+					</article>
+					<p class="read">read more</p>
+				</div>
+				<div class="med">
+					<h3>Responsive Web Design</h3>
+					<article>
+						<img src="img/mob.png">
+						<p>approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.</p>
+					</article>
+					<p class="read">read more</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="footer width flex">
+			<p>©2017 hyper text murkup language</p>
+			<p>created by: ME</p>
+		</div>
+	</footer>
 
 	<script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
 </body>
