--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<nav class="navigation">
 				<ul class="navigation-ul flex">
 					<li class="navigation-li">
-						<a class="navigation-a" href=""> home</a>
+						<a class="navigation-a" href="index2.html"> home</a>
 						
 					</li>
 					<li class="navigation-li">
